# docs

./: .cursorignore  .cursorrules  .editorconfig  .env.local.example  .gitignore  .npmrc  .prettierrc  .vale.ini  ACR_CLAUDE_SETUP.md  AGENTS.md  AUTHORING.md  CLAUDE.md  DESIGN_SYSTEM_DEPENDENCY_ANALYSIS.md  ISSUE_SUMMARY.md  Makefile  README.md  REVIEW_PR_AND_FIX_REPORT.md  STYLEGUIDE.md  biome.jsonc  changelog-instructions.md  components.json  config.js  config.ts  context7.json  eslint.config.js  fix_line_extraction.py  instrumentation-client.ts  mdx-components.ts  mdx-components.tsx  middleware.ts  next-sitemap.config.js  next.config.js  next.config.mjs  next.config.ts  next.config.ts.backup  package-lock.json  package.json  planningdoc.md  pnpm-lock.yaml  pnpm-workspace.yaml  (+11 more)
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
.i18n-cache/: hashes.json
_dictionaries/: en.ts  es.ts  get-dictionary-client.ts  get-dictionary.ts  i18n-config.ts  pt-BR.ts
algolia/: README.md  crawler-config.js
app/: _meta.ts  cheat-sheet-print.css  globals.css  layout.tsx  not-found.tsx  sitemap.ts
content/: _app.tsx  index.mdx
data/: custom_sections_for_merge.json
i18n-sync/: index.ts
lib/: glossary-parser.ts  mdx-to-markdown.tsx  next-plugin-llmstxt.ts  remark-glossary.ts
make_docs/: __init__.py  docs_builder.py  pyproject.toml  templates.py
make_toolkit_docs/: .env.sample  .gitignore  __main__.py  discovery.py  docs_builder.py  pyproject.toml  utils.py
pages/: _app.js  _app.tsx  _meta.json  _meta.ts  _topnav.json  index.mdx  index.tsx
public/: _redirects  index.html  llms-full.txt  llms.txt  robots.txt  sitemap-0.xml  sitemap.xml
scripts/: README-merge-custom-sections.md  README-sync-toolkit-sidebar.md  check-meta-keys.ts  (+28 more)
(+20442 files in other folders)
