[project]
name = "arcade-docs"
version = "1.2.1"
description = "Arcade.dev - Auto-build documentation for MCP Servers"
authors = [
    {name = "Arcade", email = "dev@arcade.dev"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"

dependencies = [
    "arcade-core>=3.0.0,<4.0.0",
    "arcade-mcp[arcade-cli]>=1.2.0,<2.0.0",
    "typer==0.10.0",
    "rich==13.9.4",
    "openai==1.82.1",
    "click==8.1.8",
    "inquirerpy>=0.3.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.1.2",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.7",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
    "ruff>=0.4.0",
    "types-PyYAML>=6.0.0",
    "types-python-dateutil>=2.8.2",
    "types-pytz>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["E501", "S105"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
